[package]
name = "minidraw"
version = "0.1.0"
edition = "2021"

[dependencies]
# https://github.com/bevyengine/bevy/blob/main/docs/cargo_features.md
bevy = { version = "0.14.0", default-features = false, features = [
    "bevy_asset",         # Assets management
    "bevy_core_pipeline", # Common rendering abstractions
    "bevy_sprite",        # 2D (sprites) rendering
    "dynamic_linking",    # Dynamic linking for faster compile-times
    "multi_threaded",     # Run with multithreading
    "bevy_winit",         # Window management (cross-platform Winit backend)
    "x11",                # Linux: Support X11 windowing system
] }
bevy_image_export = "0.11.0"
bevy_prototype_lyon = "0.12.0"
guard_macros = "1.0.2"
imageproc = "0.25.0"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
